# cotchat

./: .example.env  .gitignore  README.md  chat_generator.py  clichat.py  pyproject.toml
cotchat/: __init__.py  cli.py  interface.py  setup.py
