[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cotchat"
version = "0.1.0"
description = "A CLI chat interface for various AI models"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "openai>=1.0.0",
    "rich>=10.0.0",
    "python-dotenv>=0.19.0",
    "prompt_toolkit>=3.0.0",
    "litellm>=1.0.0",
    "platformdirs>=3.0.0"
]

[project.scripts]
cotchat = "cotchat.cli:main" 